--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ share/python-wheels/
 *.egg
 MANIFEST
 
+# outpput
+output/
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
@@ -150,7 +153,7 @@ activemq-data/
 # Environments
 .env
 .envrc
-.venv
+.venv*
 env/
 venv/
 ENV/
